# onnxruntime

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILD.md  CONTRIBUTING.md  LICENSE  Nuget.config  ONNXRuntime_EndUserLicenseAgreement.docx  README.md  README.rst  README.txt  ThirdPartyNotices.txt  VERSION_NUMBER  bld.bat  bld.sh  build.amd64.1411.bat  build.bat  build.sh  build_bs.bat  build_doc_python.bat  packages.config  rename_manylinux.sh  requirements-dev.txt  requirements.txt  setup.py  update.bat
cmake/: CMakeLists.txt  ConfigureVisualStudioCodeAnalysis.props  EnableVisualStudioCodeAnalysis.props  README.txt  commonIR_core_graph.cmake  commonIR_core_protobuf.cmake  commonIR_unittest.cmake  lotusIR_core_graph.cmake  lotusIR_core_protobuf.cmake  lotusIR_graph.cmake  lotusIR_unittest.cmake  lotusIR_util.cmake  lotus_cmake_utils.cmake  lotus_codegen.cmake  lotus_common.cmake  lotus_core_framework.cmake  lotus_dependencies.dot  lotus_framework.cmake  lotus_kernels.cmake  lotus_providers.cmake  lotus_python.cmake  lotus_runtime.cmake  lotus_session.cmake  lotus_unittests.cmake  onnx.cmake  onnx_core_protobuf.cmake  onnxruntime.cmake  onnxruntime_cmake_utils.cmake  onnxruntime_codegen.cmake  onnxruntime_common.cmake  onnxruntime_dependencies.dot  onnxruntime_framework.cmake  onnxruntime_graph.cmake  onnxruntime_mlas.cmake  onnxruntime_providers.cmake  onnxruntime_providers_internal.cmake  onnxruntime_python.cmake  onnxruntime_session.cmake  onnxruntime_unittests.cmake  onnxruntime_unittests_internal.cmake  (+2 more)
cmake/onnx/: CMakeLists.txt
cmake/patches/protobuf/src/google/protobuf/compiler/cpp/: cpp_file.cc
core/defs/experiments/: defs.cc
core/defs/generator/: defs.cc
core/defs/logical/: defs.cc
core/defs/nn/: defs.cc
core/defs/rnn/: defs.cc
core/defs/tensor/: defs.cc
core/framework/: allocator.cc  allocator.h  allocatormgr.cc  allocatormgr.h  data_types.cc  data_types.h  exceptions.h  execution_provider.h  inference_engine.h  init.cc  init.h  ml_value.h  tensor.h  workspace.h
core/graph/: constants.cc  constants.h  graph.cc  graph.h  graph_transformer.h  model.cc  model.h  op.cc  op.h  opschema.cc  opschema.h  opsignature.cc  opsignature.h  record.h  shape_inference.cc  shape_inference.h  status.cc  status.h  tensorutils.cc  tensorutils.h  utils.cc  utils.h
core/protobuf/: Data.proto  TensorShape.proto  Type.proto  graph.proto  onnx-ml.proto
core/protobuf/ONNX/: ONNX-1.proto  ONNX-ops.txt  ONNX.proto
csharp/: OnnxRuntime.CSharp.proj
csharp/src/Microsoft.ML.OnnxRuntime/: Exceptions.cs  Microsoft.ML.OnnxRuntime.props  NamedOnnxValue.cs  NativeMethods.cs  NativeTypes.cs  OnnxRuntime.cs  SessionOptions.cs
csharp/test/Microsoft.ML.OnnxRuntime.Tests/: InferenceTest.cs
docs/: ABI.md  AddingCustomOp.md  C_API.md  Coding Conventions and Standards.md  Coding_Conventions_and_Standards.md  FAQ.md  IR.md  Operators.md  Overview.md  Performance.md  Python_Dev_Notes.md  Roadmap.md  Versioning.md
docs/python/: api.rst  conf.py  examples_md.rst  index.rst  intro.rst  license.rst  main.rst  manual.rst  onnxml.rst  tutorial.rst
docs/python/examples/: plot_backend.py  plot_bug.py  plot_convert_pipeline_vectorizer.py  plot_load_and_predict.py  plot_load_and_predict_with_lotus.py  plot_metadata.py  plot_pipeline.py  plot_profiling.py  plot_train_convert_predict.py
docs/python/md_outputter/: _sphinx_common_builder.py  md_builder.py  md_outputter.py  md_writer.py
docs_python/: api.rst  conf.py  index.rst
lotus/: .clang-format  ReformatSourcePython.bat  VSCodeCoverage.runsettings  __init__.py
lotus/contrib_ops/: contrib_ops.cc  contrib_ops.h
lotus/contrib_ops/cpu/: expand_dims.cc  expand_dims.h  sample.cc  sample.h
lotus/core/codegen_utils/: tvm_compiler.cc  tvm_compiler.h  tvm_kernel.h  tvm_utils.cc  tvm_utils.h
lotus/core/common/: common.h  exception.cc  exceptions.h  log_sink.h  log_sink_common.cc  logging.cc  logging.h  profiler.cc  profiler.h  status.cc  status.h  task_thread_pool.h
lotus/core/framework/: IOBinding.cc  IOBinding.h  alloc_kind.h  allocation_planner.cc  allocation_planner.cpp  allocation_planner.h  allocator.cc  allocator.cu  allocator.h  allocatormgr.cc  allocatormgr.h  arena.h  bfc_arena.cc  bfc_arena.h  cblas.h  compare_mlvalue.cc  compare_mlvalue.h  customregistry.cc  customregistry.h  data_types.cc  data_types.h  data_types_impl.h  environment.cc  environment.h  exceptions.h  execution_frame.cc  execution_frame.h  execution_provider.cc  execution_provider.h  execution_providers.h  executor.cc  executor.h  fence.h  framework_common.h  function_kernel.cc  iexecutor.h  (+61 more)
lotus/onnx/: onnx-ml.proto
lotus/python/: _pybind_state.py  lotus_pybind_mlvalue.cc  lotus_pybind_mlvalue.h  lotus_pybind_state.cc  onnx_runtime_pybind_mlvalue.cc  onnx_runtime_pybind_mlvalue.h  onnx_runtime_pybind_state.cc  onnxruntime_pybind_mlvalue.cc  onnxruntime_pybind_mlvalue.h  onnxruntime_pybind_state.cc  session.py
lotus/test/: capturing_sink.h  test_environment.cc  test_environment.h  test_util.cc  test_utils.cc  test_utils.h
onnxruntime/: ReformatSource.ps1  VSCodeCoverage.ReadMe.md  VSCodeCoverage.runsettings  __init__.py
onnxruntime/contrib_ops/: contrib_kernels.cc  contrib_ops.cc  contrib_ops.h
onnxruntime/core/: version_script.lds
onnxruntime/python/: onnxruntime_pybind_mlvalue.cc  onnxruntime_pybind_mlvalue.h  onnxruntime_pybind_state.cc  onnxruntime_validation.py  session.py
package/rpm/: onnxruntime.spec
temp/test-data/: MLValue_599_Usage.txt  debug_notes.txt  main_graph_allocation_plan.txt  main_graph_nodes_topo_order.txt  main_graph_nodes_topo_order_6.txt  path_to_final_nodes.txt
test/: commonds_test.cc  graph_test.cc  onnx_model_test.cc  op_reg_test.cc  op_test.cc  tensorutils_test.cc  utils_test.cc
tools/: wrap_proto_header.py
tools/ci_build/: build.py  static_analysis_filter.py
tools/lotus_exec/: CmdParser.h  Main.cpp  Model.h  README.md  Runtime.h  TestDataReader.h  lotus_exec.vcxproj  lotus_exec.vcxproj.filters
tools/nuget/: create_nuspect.py  template.nuspec  template.targets
tools/onnx/: ModelOperatorParser.py
(+1422 files in other folders)
